2017-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCCbitv.h,
	  src/SDCCbitv.c,
	  src/*/ralloc2.cc:
	  Speed up register allocator a bit.

2017-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient >= 32-bit increment for (partially) spilt local variables.

2017-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve 16-bit register-to-register transfer,
	  consider cycle cost for register allocation.
	* src/stm8/peeph.def:
	  Improve 16-bit addition with on-stack operand.

2017-06-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/peeph.def:
	  More efficient comparisons.

2017-06-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2621.c:
	  Disable test for ds390, which doesn't have long long.

2017-06-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/stm8.c:
	  More efficient equality comparisons.
	* support/regression/tests/bug-2621.c:
	  Test for bug #2612.

2017-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/stm8.c:
	  More efficient equality comparisons, fix bug #2612.

2017-05-31 Philipp Klaus Krause <pkk AT spth.de>

	* device/non-free/lib/pic14/Makefile.in,
	  device/non-free/lib/pic14/Makefile.subdir,
	  src/Makefile.in,
	  src/port.mk:
	  Sort directory listings towards are reproducible build, patch by Bernhard M. Wiedemann.

2017-05-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCmain.c,
	  src/SDCCicode.c,
	  doc/sdccman.lyx:
	  Deprecate --nojtbound and the corresponding pragma.

2017-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2617.

2017-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a z80 codegen bug #2615 in and (triggered by recent register allocation changes when using --reserve-regs-iy).

2017-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c: